--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     <script>
         // IMPORTANTE: Deberas reemplazar 'URL_DE_TU_WEBHOOK_N8N' por la URL real de tu nodo Webhook cuando lo configures.
         //const webhookURL = 'https://repodinamik.up.railway.app/webhook/RepDinAmk';                              
-        const webhookURL = 'https://repodinamk.up.railway.app/webhook-test/RepDin'
+        const webhookURL = 'http://localhost:5678/webhook-test/RepDinAmk'
+		                     
 
         function enviarAn8n() {
             const peticion = document.getElementById('userInput').value.trim();
