--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <script>
         // IMPORTANTE: Deberas reemplazar 'URL_DE_TU_WEBHOOK_N8N' por la URL real de tu nodo Webhook cuando lo configures.
         //const webhookURL = 'https://repodinamik.up.railway.app/webhook/RepDinAmk';                              
-        const webhookURL = 'http://localhost:5678/webhook-test/RepDinAmk'
+        const webhookURL = 'http://localhost:5678/webhook-test/RepDinAmk';
 		                     
 
         function enviarAn8n() {
